--- a/Project 1/Report.html
+++ b/Project 1/Report.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Antoine Magnin Robin Michel Pierre Monari Ronald Medvedev and Faber Bickerstaffe">
-<meta name="dcterms.date" content="2024-04-24">
+<meta name="dcterms.date" content="2024-05-01">
 
 <title>Forecasting II - Total Vaud Visitors &amp; Japanese Visitors in Luzern</title>
 <style>
@@ -3060,7 +3060,7 @@ vertical-align: -.125em;
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">April 24, 2024</p>
+      <p class="date">May 1, 2024</p>
     </div>
   </div>
   
@@ -3102,39 +3102,39 @@ vertical-align: -.125em;
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">China</td>
-<td style="text-align: left;">Bern / Berne</td>
-<td style="text-align: left;">April</td>
-<td style="text-align: left;">2012</td>
-<td style="text-align: right;">7986</td>
+<td style="text-align: left;">Italien</td>
+<td style="text-align: left;">Uri</td>
+<td style="text-align: left;">Juni</td>
+<td style="text-align: left;">2019</td>
+<td style="text-align: right;">355</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Estland</td>
-<td style="text-align: left;">Neuchâtel</td>
-<td style="text-align: left;">Januar</td>
-<td style="text-align: left;">2010</td>
-<td style="text-align: right;">1</td>
+<td style="text-align: left;">Litauen</td>
+<td style="text-align: left;">Schweiz</td>
+<td style="text-align: left;">März</td>
+<td style="text-align: left;">2013</td>
+<td style="text-align: right;">504</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Philippinen</td>
-<td style="text-align: left;">Luzern</td>
-<td style="text-align: left;">Februar</td>
-<td style="text-align: left;">2009</td>
-<td style="text-align: right;">2</td>
+<td style="text-align: left;">Schweiz</td>
+<td style="text-align: left;">Mai</td>
+<td style="text-align: left;">2021</td>
+<td style="text-align: right;">102</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Japan</td>
-<td style="text-align: left;">Glarus</td>
-<td style="text-align: left;">Februar</td>
-<td style="text-align: left;">2021</td>
-<td style="text-align: right;">0</td>
+<td style="text-align: left;">Ungarn</td>
+<td style="text-align: left;">Schweiz</td>
+<td style="text-align: left;">September</td>
+<td style="text-align: left;">2016</td>
+<td style="text-align: right;">3281</td>
 </tr>
 <tr class="odd">
-<td style="text-align: left;">Singapur</td>
+<td style="text-align: left;">Neuseeland, Ozeanien</td>
 <td style="text-align: left;">Obwalden</td>
-<td style="text-align: left;">Juli</td>
-<td style="text-align: left;">2005</td>
-<td style="text-align: right;">4</td>
+<td style="text-align: left;">Juni</td>
+<td style="text-align: left;">2020</td>
+<td style="text-align: right;">0</td>
 </tr>
 </tbody>
 </table>
